--- a/src/components/drawer/drawer.module.less
+++ b/src/components/drawer/drawer.module.less
@@ -4,6 +4,7 @@
 .titleDrawer {
   display: flex;
   justify-content: space-between;
+  
 }
 .searchInDrawer2 {
   display: flex;
@@ -57,6 +58,7 @@
   font-weight: 600;
   font-size: 22px;
   line-height: 28px;
+  padding: 15px;
 
   /* identical to box height */
 
@@ -94,4 +96,7 @@
 }
 .nameAndPs {
   width: 100%;
+}
+.drawerWrap{
+  padding: 30px;
 }
