--- a/src/pages/LichSuCuocGoi/lscg.module.less
+++ b/src/pages/LichSuCuocGoi/lscg.module.less
@@ -1,5 +1,5 @@
 .container {
-  height: 200vh;
+  height: 100vh;
 }
 .red {
   color: #ff5855;
@@ -11,11 +11,19 @@
   color: #f6a447;
 }
 .title {
-  font-weight: 600;
-  font-size: 20px;
-  padding-left: 20px;
+  // font-weight: 600;
+  // font-size: 20px !important;
+  // padding-left: 20px;
+  // color: #2C3782;
+  // padding: 20px;
   background-color: white;
 }
 .title > p {
   box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.05);
+}
+.table{
+  margin: 20px;
+}
+.topbar{
+  background-color: white !important;
 }
