--- a/src/pages/QuanLyBenhNhan/qlbn.module.less
+++ b/src/pages/QuanLyBenhNhan/qlbn.module.less
@@ -1,5 +1,5 @@
 .container {
-  height: 200vh;
+  height: 100vh;
 }
 .title {
   font-weight: 600;
@@ -28,4 +28,11 @@
     margin-right: 10px;
   }
   color: #6576ff;
+}
+.topbar{
+  background-color: white !important;
+
+}
+.table{
+  margin: 20px;
 }
