--- a/src/pages/QuanLyNhanVien/qlnv.module.less
+++ b/src/pages/QuanLyNhanVien/qlnv.module.less
@@ -1,5 +1,5 @@
 .container {
-  height: 200vh;
+  height: 100vh;
 }
 .title {
   font-weight: 600;
@@ -31,4 +31,11 @@
 }
 .textSwitchbtn {
   margin-right: 15px;
+}
+.topbar{
+  background-color: white !important;
+  
+}
+.table{
+  margin: 20px;
 }
