--- a/src/assets/styles/main.less
+++ b/src/assets/styles/main.less
@@ -32,7 +32,7 @@
 @table-selected-row-hover-bg: @navy1;
 @layout-body-background: #f5f7fb;
 @layout-header-background: #fff;
-@layout-sider-background: @navy1;
+// @layout-sider-background: @navy1;
 @layout-header-padding: 0px;
 @layout-header-height: @header-height;
 @modal-body-padding: 24px 0px;
@@ -41,8 +41,8 @@
 @menu-dark-bg: @layout-sider-background;
 @menu-dark-item-active-bg: @blue1;
 @menu-item-active-border-width: 0px;
-@menu-dark-inline-submenu-bg: @navy1;
-@menu-popup-bg: @navy1;
+// @menu-dark-inline-submenu-bg: @navy1;
+// @menu-popup-bg: @navy1;
 * {
   font-family: "Quicksand" !important;
   box-sizing: border-box;
