--- a/src/layouts/MainSider/mainSider.module.less
+++ b/src/layouts/MainSider/mainSider.module.less
@@ -1,9 +1,11 @@
+@import "../../assets/styles/mixins.less";
 .container {
   height: 100vh;
   position: sticky;
   top: 0;
-  color: navy;
+  color: @navy1;
   .menu{
+    color: @navy1;
     border-right: none;
   }
 }
