--- a/src/pages/TiepNhanCuocGoi/tncg.module.less
+++ b/src/pages/TiepNhanCuocGoi/tncg.module.less
@@ -406,14 +406,15 @@
   background-color: #ff5855 !important;
 }
 
-.info {
-}
+// .info {
+// }
 
-.btnGroup {
+.buttonWrap {
   display: flex;
   flex-direction: row;
   padding-top: 40px;
   gap: 10px;
+  color: @navy1 !important;
   .btn {
     border: none;
 
