--- a/src/layouts/MainSider/mainSider.module.less
+++ b/src/layouts/MainSider/mainSider.module.less
@@ -8,6 +8,7 @@
     color: @navy1;
     border-right: none;
   }
+  box-shadow: 0px 4px 20px #ccc;
 }
 :global(.ant-menu-item-selected) {
   background-color: #6576ff !important;
