--- a/src/pages/TiepNhanCuocGoi/tncg.module.less
+++ b/src/pages/TiepNhanCuocGoi/tncg.module.less
@@ -3,8 +3,8 @@
 @royalBlue: #6576ff;
 @white: #fff;
 .container {
-  // height: 200vh;
-  // height: 50vh;
+  // height: 100%;
+  // overflow: scroll;
 }
 .tncgHeader {
   color: @navy1;
@@ -451,4 +451,8 @@
     filter: invert(100%) sepia(100%) saturate(100%) hue-rotate(87deg)
       brightness(119%) contrast(119%);
   }
+}
+
+.topbar{
+  background-color: #fff !important;
 }
