--- a/src/pages/bangDieuKhien/bdk.module.less
+++ b/src/pages/bangDieuKhien/bdk.module.less
@@ -1,3 +1,4 @@
+@import "../../assets/styles/mixins.less";
 .title {
   font-weight: 600;
   font-size: 20px;
@@ -45,11 +46,13 @@
   font-weight: 700;
   font-size: 16px;
   line-height: 20px;
+  color: @navy1;
 }
 .email {
   font-weight: 500;
   font-size: 12px;
   line-height: 15px;
+  color: @navy1;
 }
 
 .status2 {
