--- a/src/pages/TiepNhanCuocGoi/thongTinBenhNhan/ttbn.module.less
+++ b/src/pages/TiepNhanCuocGoi/thongTinBenhNhan/ttbn.module.less
@@ -1,3 +1,21 @@
+.box{
+  background: #ffffff;
+  box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.05);
+  border-radius: 10px;
+
+}
+
+.container{
+
+  .wrapper-col{
+    &:extend(.box);
+    height: 100%;
+  }
+  :global(.ant-divider){
+    border-top:none ;
+  }
+}
+
 .firstContentBar {
   margin: 15px;
   display: flex;
@@ -15,6 +33,7 @@
 
   margin-bottom: 15px;
 }
+
 .thongTinHanhChinhTitle,
 .lichSuTuVanTitle {
   img {
@@ -28,27 +47,30 @@
   color: #2c3782;
   font-weight: 600;
 }
+
+.wrapper-content{
+display: flex;
+height: 90%;
+  .top-50{
+    margin: auto;
+  }
+}
+
+
 .thongTinHanhChinh,
 .lichSuTuVan {
-  background-color: white;
+  background-color: #fff;
   display: flex;
   flex-direction: column;
   box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.05);
   border-radius: 10px;
-  flex: 1;
 }
-.thongTinHanhChinh {
-}
+
 .lichSuTuVan {
   position: relative;
   overflow: auto;
 }
-.lichSuTuVanChild {
-  position: absolute;
-  right: 0;
-  left: 0;
-  top: 0;
-}
+
 
 .row-xyz {
   display: flex;
