--- a/src/pages/TiepNhanCuocGoi/tncg.module.less
+++ b/src/pages/TiepNhanCuocGoi/tncg.module.less
@@ -4,7 +4,10 @@
 @white: #fff;
 .container {
   // height: 200vh;
-  // height: 50vh;
+  height: 100vh;
+  // width: 100%;
+
+
 }
 .tncgHeader {
   color: @navy1;
