--- a/src/assets/styles/main.less
+++ b/src/assets/styles/main.less
@@ -48,32 +48,32 @@
   box-sizing: border-box;
   // font-weight: 500 !important;
 }
-h2,
-h3,
-h5,
-h6,
-p,
-div,
-a,
-span {
-  margin-bottom: 0;
-  font-size: 13px;
-}
-h1 {
-  font-size: 22px;
-}
-h2 {
-  font-size: 20px;
-}
-h3 {
-  font-size: 18px;
-}
-h4 {
-  font-size: 16px;
-}
-label {
-  font-weight: 700 !important;
-}
+// h2,
+// h3,
+// h5,
+// h6,
+// p,
+// div,
+// a,
+// span {
+//   margin-bottom: 0;
+//   font-size: 13px;
+// }
+// h1 {
+//   font-size: 22px;
+// }
+// h2 {
+//   font-size: 20px;
+// }
+// h3 {
+//   font-size: 18px;
+// }
+// h4 {
+//   font-size: 16px;
+// }
+// label {
+//   font-weight: 700 !important;
+// }
 
 .green-txt {
   color: @green1;
